[package]
name = "vcs"
version = "0.1.0"
authors = ["Sam Anklesaria <sam@spacemaker.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "^0"
glib = ""
pyo3 = "0.11.1"
sha2 = ""
bincode = ""
gtk-test = ""

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.sourceview]
version = "0.9.0"
features = ["v3_24"]
